# kimberlyartscape

./: cspell.json  package-lock.json  package.json
app/: page.tsx
backend/back_back/: Cargo.toml
backend/back_back/src/: artwork_handlers.rs  main.rs  routes.rs
components/: ArtistProfile.tsx  ArtworkCard.tsx  CartItem.tsx  DisplayCard.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  Navbar.tsx  Sidebar.tsx  UploadForm.tsx  fetch.tsx
pages/: _app.tsx  artist-uploads.tsx  artworks.tsx  cart.tsx  index.tsx  login.tsx  sylvanas.tsx
pages/admin/: index.tsx
pages/artist/: [id].tsx  cart.tsx  login.tsx
styles/: ArtistProfile.module.scss  ArtistUploads.module.scss  ArtworkCard.module.scss  Artworks.module.scss  CartPage.module.scss  Header.module.scss  HomePage.module.scss  LoginPage.module.scss  Navbar.module.scss  Sidebar.module.scss  Sylvanas.module.scss  displaycard.module.scss  globals.scss
utils/: _app.tsx  axiosInstance.ts  fileUploadUtils.ts
