[package]
name = "back_back"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6.6"
actix-cors = "0.6.5"
actix-multipart = "0.6.2"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

